# votr-flask

./: .gitignore  CORRECT FORM.html  README.md  app.py  commands.md  forms.py  pyproject.toml  requirements.txt
sql/: dml_queries.sql  set_up_db.sql
static/assets/css/: styles.css
static/assets/js/: votr.js
templates/: 401.html  404.html  500.html  darkly_reference.html  footer.html  home.html  layout.html  nav.html  payments.html  polls.html  test_db.html  user_poll_settings.html  users.html  votes.html
votr-flask/: .gitignore  Procfile  app.py  pyproject.toml  requirements.txt  run.py
votr-flask/old-votr-flask/: config.py
votr-flask/old-votr-flask/votr_flask/: app.py  extensions.py
votr-flask/old-votr-flask/votr_flask/public/: views.py
votr-flask/old-votr-flask/votr_flask/templates/: layout.html
votr-flask/static/assets/css/: styles.css
votr-flask/templates/: footer.html  layout.html  nav.html  payments.html  users.html  users_polls.html
votr-flask/templates/sebastien_html/: payments.html  polls(1).html  users.html  users_polls.html  votes(1).html  votes(2).html
votr-flask/tests/: test_votr_flask.py
votr-flask/votr_flask/public/: forms.py  views.py
votr-flask/votr_flask/templates/: footer.html  layout.html  nav.html
votr-flask/votr_flask/templates/public/: home.html  users.html
